[gd_scene load_steps=5 format=3 uid="uid://bo13um322tmri"]

[ext_resource type="Script" path="res://scripts/screen.gd" id="1_qgjpu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s11mv"]
bg_color = Color(1.34766e-06, 0.651326, 0.887248, 1)

[sub_resource type="Theme" id="Theme_qxhsx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe6mu"]
bg_color = Color(1, 0, 0, 1)

[node name="Screen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_qgjpu")
current_world = "tutorial"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordContainer" type="PanelContainer" parent="ColorRect/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 375)
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/PasswordContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 64
text = "Master Door Computer"

[node name="VBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PasswordInput" type="LineEdit" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
placeholder_text = "Password"
expand_to_text_length = true

[node name="SubmitButton" type="Button" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_s11mv")
text = "Submit"

[node name="Error" type="Label" parent="ColorRect/CenterContainer/PasswordContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Wrong Password"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeaveButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = SubResource("Theme_qxhsx")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qe6mu")
text = "Leave"
